--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "jest --runInBand --watchAll",
     "build": "tsc"
   },
   "dependencies": {
@@ -21,5 +21,6 @@
     "@types/google-spreadsheet": "^3.3.2",
     "@types/node": "^20.3.1",
     "ts-jest": "^29.1.0"
-  }
+  },
+  "license": "MPL-2.0"
 }
