feat: changed package name, updated readme & pckgs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "obj-to-sheet",
+  "name": "spread-it",
   "description": "A simple way to export your JavaScript objects into a spreadsheet",
   "author": "Almighty Baka <ivan@almightybaka.com> (https://almightybaka.com/)",
   "version": "0.0.0",
