--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "type": "module",
   "scripts": {
     "test": "jest --runInBand --watchAll",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint \"src/**/*.ts\" --fix",
+    "lint:print": "eslint \"src/**/*.ts\""
   },
   "dependencies": {
     "google-spreadsheet": "^3.3.0",
@@ -21,6 +23,12 @@
   "devDependencies": {
     "@types/google-spreadsheet": "^3.3.2",
     "@types/node": "^20.3.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.0.3",
     "ts-jest": "^29.1.0"
   },
   "license": "MPL-2.0"
